# src/main/java/com/sprint/mission/discodeit/dto/request/user/UserUpdatePasswordRequest.java
@@ -1,8 +1,12 @@
 package com.sprint.mission.discodeit.dto.request.user;
 
 import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.Size;
 
 public record UserUpdatePasswordRequest(
-        @NotBlank String password
+
+        @NotBlank
+        @Size(min = 8, max = 72)
+        String password
 ) {
 }
