# src/main/java/com/sprint/mission/discodeit/dto/request/user/UserUpdateProfileImageRequest.java
@@ -1,10 +1,12 @@
 package com.sprint.mission.discodeit.dto.request.user;
 
-import jakarta.validation.constraints.NotNull;
+import jakarta.validation.constraints.NotBlank;
 
 import java.util.UUID;
 
 public record UserUpdateProfileImageRequest(
-        @NotNull UUID profileId
+
+        @NotBlank
+        UUID profileId
 ) {
 }
